tests/pos/i2218.scala
trait Rule[In]

class C {
  def ruleWithName[In](f: In => Int): Rule[In] = {
     new DefaultRule(f) {}
  }

  class DefaultRule[In](f: In => Int) extends Rule[In]
}
